2009-01-19  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 23409: REGRESSION: RegExp 'replace()' function improperly processes '$$'
        <https://bugs.webkit.org/show_bug.cgi?id=23409>
        <rdar://problem/6505723>

        * fast/js/resources/string-replace-3.js:
        * fast/js/string-replace-3-expected.txt:

2009-01-19  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=18078
        
        Fix transition-test-helpers.js to handle more kinds
        of CSS properties, like lists and colors, and to
        optionally not use the pause API.

        * transitions/transform-op-list-match.html:
        * transitions/transform-op-list-no-match.html:
        * transitions/transition-test-helpers.js:
        (runTransitionTest.checkExpectedValue):
        (runTransitionTest.runTest):
        * transitions/zero-duration-in-list.html:

2009-01-19  Alexey Proskuryakov  <ap@webkit.org>

        Update test results for https://bugs.webkit.org/show_bug.cgi?id=23417.

        * fast/dom/Window/window-properties-expected.txt:

2009-01-19  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 23422: AX: AXLinks should expose access key information
        https://bugs.webkit.org/show_bug.cgi?id=23422

        Update and add tests for access key information

        * accessibility/accesskey-expected.txt: Added.
        * accessibility/accesskey.html: Added.
        * accessibility/document-links-expected.txt:
        * accessibility/legend-expected.txt:
        * accessibility/radio-button-group-members-expected.txt:
        * accessibility/table-with-aria-role-expected.txt:

2009-01-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=23417
        Implement application cache obsolete state
