@@ -1,0 +1,15 @@
+Tests transitions of the border shorthand properties.
+
+PASS - "border-top-color" property for "box" element at 0.5s saw something close to: 128,0,128
+PASS - "border-right-color" property for "box" element at 0.5s saw something close to: 128,0,128
+PASS - "border-bottom-color" property for "box" element at 0.5s saw something close to: 128,0,128
+PASS - "border-left-color" property for "box" element at 0.5s saw something close to: 128,0,128
+PASS - "border-top-width" property for "box" element at 0.5s saw something close to: 10
+PASS - "border-right-width" property for "box" element at 0.5s saw something close to: 10
+PASS - "border-bottom-width" property for "box" element at 0.5s saw something close to: 10
+PASS - "border-left-width" property for "box" element at 0.5s saw something close to: 10
+PASS - "border-top-width" property for "box1" element at 0.5s saw something close to: 10
+PASS - "border-top-color" property for "box1" element at 0.5s saw something close to: 255,0,255
+PASS - "border-top-width" property for "box2" element at 0.5s saw something close to: 10
+PASS - "border-bottom-width" property for "box2" element at 0.5s saw something close to: 20
+
