@@ -1,0 +1,9 @@
+Tests transitions of the shorthand properties padding, margin, outline, background, -webkit-border-radius.
+
+PASS - "padding-top" property for "box" element at 0.5s saw something close to: 5
+PASS - "margin-top" property for "box" element at 0.5s saw something close to: 25
+PASS - "outline-color" property for "box" element at 0.5s saw something close to: 128,0,128
+PASS - "background-color" property for "box" element at 0.5s saw something close to: 128,128,255
+PASS - "-webkit-border-top-right-radius" property for "box" element at 0.5s saw something close to: 10
+PASS - "-webkit-transform-origin" property for "box" element at 0.5s saw something close to: 50,50
+
